Issue #20: Better contrast in disabled checkboxes and disabled texts
EPL-338: Better contrast in disabled checkboxes and disabled texts

--- a/modules_core/org.openbravo.client.myob/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.myob/theme.scss
+++ b/modules_core/org.openbravo.client.myob/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.myob/theme.scss
@@ -12,7 +12,7 @@ $color6: #3d4383; /* Light Blue */
 $color7: #131743; /* Darker Blue */
 $color8: #dde0f7; /* Light Blue (20%) */
 
-$grey-font-input-disabled: #7d7d7d; /* Gray used for read-only input lettering. */
+$grey-font-input-disabled: #515151; /* Gray used for read-only input lettering. */
 
 $grey-title-tab: #333; /* Gray used for non-focused tab titles. */
 $black-font-grid: #111; /* Black for font of grid items. */
